# UCL-Skate-Club

./: .gitignore  LICENSE  README.md  pyproject.toml
skateucl/: __init__.py
skateucl/static/: style.css
skateucl/static/css/: home.css  style.css
skateucl/static/js/: committee profile viewer.js
skateucl/static/json/: committee.json
skateucl/templates/: base.html  base.j2  index.html.j2  index.j2
